--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <script type="text/javascript" src="/Users/ramblinwreck_81/GitHub/401K/401K_calculator.js"></script>
   <link rel="stylesheet" type="text/css" href="/Users/ramblinwreck_81/GitHub/401K/401K.css">
 </head>
+<body>
   <h1 class= "heading">gobees81 401K Calculator</h1>
   </body></html>
