--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
   <link rel="stylesheet" type="text/css" href="/Users/ramblinwreck_81/GitHub/401K/401K.css">
 </head>
 <body>
-  <h1 class= "heading">gobees81 401K Calculator</h1>
+  <h1 class= "heading">From this page, you can track southeast region editor progress</h1>
   </body></html>
