corrected typo in redirect URI

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <html><head></head><body>
   <script>
     var YOUR_CLIENT_ID = '997411737916-17bq5kmm5g23u7jqj5kh52v66snth0in.apps.googleusercontent.com';
-    var YOUR_REDIRECT_URI = 'https://gobees.github.io/editorprogress/index.html';
+    var YOUR_REDIRECT_URI = 'https://gobees.github.io/EditorProgress/index.html';
     var queryString = location.hash.substring(1);
 
     // Parse query string to see if page request is coming from OAuth 2.0 server.
