--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       // 'scope' field specifies space-delimited list of access scopes.
       gapi.client.init({
           'apiKey': 'AIzaSyA-qCsTn8-bWRf2_nrJThD5OYdiOH2B92U',
-          'discoveryDocs': [https://gobees.github.io/EditorProgress/index.html],
+          'discoveryDocs': ['https://gobees.github.io/EditorProgress/index.html'],
           'clientId': '997411737916-17bq5kmm5g23u7jqj5kh52v66snth0in.apps.googleusercontent.com',
           'scope': SCOPE
       }).then(function () {
