--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="google-site-verification" content="Lhu6jgcrFhiRawtU75BtCMtg86Qaku_9zgl2RvMzTQs" />
   <title>South East Region Editor Progress</title>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
