--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="google-site-verification" content="Lhu6jgcrFhiRawtU75BtCMtg86Qaku_9zgl2RvMzTQs" />
   <title>South East Region Editor Progress</title>
-<script src="EditorProgress/editor-progress.js"></script>
+<script type="text/javascript" src="EditorProgress/editor-progress.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script>
   var GoogleAuth; // Google Auth object.
