added rawgit.com to js SRC location

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="google-site-verification" content="Lhu6jgcrFhiRawtU75BtCMtg86Qaku_9zgl2RvMzTQs" />
   <title>South East Region Editor Progress</title>
-<script type="text/javascript" src="https://gobees/github.io/EditorProgress/editor-progress.js"></script>
+<script type="text/javascript" src="https://rawgit.com/gobees/EditorProgress/master/editor-progress.js"></script>
 EditorProgress/editor-progress.js
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script>
