--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://rawgit.com/gobees/EditorProgress/master/editor-progress.js"></script>
 
-
+<script>
   var GoogleAuth; // Google Auth object.
   function initClient() {
     gapi.client.init({
